@@ -3,6 +3,8 @@ package org.opencds.cqf.fhir.cr.measure.r4;
 import static org.opencds.cqf.fhir.cr.measure.common.MeasurePopulationType.DATEOFCOMPLIANCE;
 import static org.opencds.cqf.fhir.cr.measure.constant.MeasureConstants.CQFM_CARE_GAP_DATE_OF_COMPLIANCE_EXT_URL;
 import static org.opencds.cqf.fhir.cr.measure.constant.MeasureConstants.CQFM_SCORING_EXT_URL;
+import static org.opencds.cqf.fhir.cr.measure.constant.MeasureConstants.EXT_CQFM_AGGREGATE_METHOD_URL;
+import static org.opencds.cqf.fhir.cr.measure.constant.MeasureConstants.EXT_CQFM_CRITERIA_REFERENCE;
 import static org.opencds.cqf.fhir.cr.measure.constant.MeasureConstants.FHIR_ALL_TYPES_SYSTEM_URL;
 import static org.opencds.cqf.fhir.cr.measure.constant.MeasureReportConstants.IMPROVEMENT_NOTATION_SYSTEM_DECREASE;
 import static org.opencds.cqf.fhir.cr.measure.constant.MeasureReportConstants.IMPROVEMENT_NOTATION_SYSTEM_INCREASE;
@@ -11,11 +13,15 @@ import static org.opencds.cqf.fhir.cr.measure.constant.MeasureReportConstants.ME
 import static org.opencds.cqf.fhir.cr.measure.constant.MeasureReportConstants.SDE_USAGE_CODE;
 
 import ca.uhn.fhir.rest.server.exceptions.InvalidRequestException;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableList.Builder;
+import jakarta.annotation.Nonnull;
 import jakarta.annotation.Nullable;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
+import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.hl7.fhir.r4.model.CodeableConcept;
 import org.hl7.fhir.r4.model.Coding;
@@ -30,8 +36,10 @@ import org.hl7.fhir.r4.model.Measure.MeasureGroupStratifierComponent;
 import org.hl7.fhir.r4.model.Measure.MeasureGroupStratifierComponentComponent;
 import org.hl7.fhir.r4.model.Measure.MeasureSupplementalDataComponent;
 import org.hl7.fhir.r4.model.Resource;
+import org.opencds.cqf.fhir.cr.measure.MeasureStratifierType;
 import org.opencds.cqf.fhir.cr.measure.common.CodeDef;
 import org.opencds.cqf.fhir.cr.measure.common.ConceptDef;
+import org.opencds.cqf.fhir.cr.measure.common.ContinuousVariableObservationAggregateMethod;
 import org.opencds.cqf.fhir.cr.measure.common.GroupDef;
 import org.opencds.cqf.fhir.cr.measure.common.MeasureDef;
 import org.opencds.cqf.fhir.cr.measure.common.MeasureDefBuilder;
@@ -44,19 +52,11 @@ import org.opencds.cqf.fhir.cr.measure.common.StratifierDef;
 import org.opencds.cqf.fhir.cr.measure.constant.MeasureConstants;
 
 public class R4MeasureDefBuilder implements MeasureDefBuilder<Measure> {
+
     @Override
     public MeasureDef build(Measure measure) {
         checkId(measure);
 
-        // SDES
-        List<SdeDef> sdes = new ArrayList<>();
-        for (MeasureSupplementalDataComponent s : measure.getSupplementalData()) {
-            checkId(s);
-            checkSDEUsage(measure, s);
-            var sdeDef = new SdeDef(
-                    s.getId(), conceptToConceptDef(s.getCode()), s.getCriteria().getExpression());
-            sdes.add(sdeDef);
-        }
         // scoring
         var measureScoring = getMeasureScoring(measure);
         // populationBasis
@@ -67,90 +67,257 @@ public class R4MeasureDefBuilder implements MeasureDefBuilder<Measure> {
         // Groups
         List<GroupDef> groups = new ArrayList<>();
         for (MeasureGroupComponent group : measure.getGroup()) {
-            // group Measure Scoring
-            var groupScoring = getGroupMeasureScoring(measure, group);
-            // populationBasis
-            var groupBasis = getGroupPopulationBasis(group);
-            // improvement Notation
-            var groupImpNotation = getGroupImpNotation(measure, group);
-            var hasGroupImpNotation = groupImpNotation != null;
+            var groupDef = buildGroupDef(measure, group, measureScoring, measureImpNotation, measureBasis);
 
-            // Populations
-            List<PopulationDef> populations = new ArrayList<>();
-            for (MeasureGroupPopulationComponent pop : group.getPopulation()) {
-                checkId(pop);
-                MeasurePopulationType populationType = MeasurePopulationType.fromCode(
-                        pop.getCode().getCodingFirstRep().getCode());
-
-                populations.add(new PopulationDef(
-                        pop.getId(),
-                        conceptToConceptDef(pop.getCode()),
-                        populationType,
-                        pop.getCriteria().getExpression()));
-            }
-
-            if (group.getExtensionByUrl(CQFM_CARE_GAP_DATE_OF_COMPLIANCE_EXT_URL) != null
-                    && checkPopulationForCode(populations, DATEOFCOMPLIANCE) == null) {
-                // add to definition
-                var expressionType = (Expression) group.getExtensionByUrl(CQFM_CARE_GAP_DATE_OF_COMPLIANCE_EXT_URL)
-                        .getValue();
-                if (!expressionType.hasExpression()) {
-                    throw new InvalidRequestException("no expression was listed for extension: %s for Measure: %s"
-                            .formatted(CQFM_CARE_GAP_DATE_OF_COMPLIANCE_EXT_URL, measure.getUrl()));
-                }
-                var expression = expressionType.getExpression();
-                populations.add(new PopulationDef(
-                        "dateOfCompliance", totalConceptDefCreator(DATEOFCOMPLIANCE), DATEOFCOMPLIANCE, expression));
-            }
-
-            // Stratifiers
-            List<StratifierDef> stratifiers = new ArrayList<>();
-            for (MeasureGroupStratifierComponent mgsc : group.getStratifier()) {
-                checkId(mgsc);
-
-                // Components
-                var components = new ArrayList<StratifierComponentDef>();
-                for (MeasureGroupStratifierComponentComponent scc : mgsc.getComponent()) {
-                    checkId(scc);
-                    var scd = new StratifierComponentDef(
-                            scc.getId(),
-                            conceptToConceptDef(scc.getCode()),
-                            scc.hasCriteria() ? scc.getCriteria().getExpression() : null);
-
-                    components.add(scd);
-                }
-
-                if (!components.isEmpty() && mgsc.getCriteria().getExpression() != null) {
-                    throw new InvalidRequestException(
-                            "Measure stratifier: %s, has both component and stratifier criteria expression defined. Only one should be specified"
-                                    .formatted(mgsc.getId()));
-                }
-
-                var stratifierDef = new StratifierDef(
-                        mgsc.getId(),
-                        conceptToConceptDef(mgsc.getCode()),
-                        mgsc.getCriteria().getExpression(),
-                        components);
-
-                stratifiers.add(stratifierDef);
-            }
-
-            var groupDef = new GroupDef(
-                    group.getId(),
-                    conceptToConceptDef(group.getCode()),
-                    stratifiers,
-                    populations,
-                    getScoringDef(measure, measureScoring, groupScoring),
-                    hasGroupImpNotation,
-                    getImprovementNotation(measureImpNotation, groupImpNotation),
-                    getPopulationBasisDef(measureBasis, groupBasis));
             groups.add(groupDef);
         }
-        return new MeasureDef(measure.getId(), measure.getUrl(), measure.getVersion(), groups, sdes);
+
+        return new MeasureDef(
+                // We don't need either the version of the "Measure" qualifier here
+                measure.getIdElement(), measure.getUrl(), measure.getVersion(), groups, getSdeDefs(measure));
+    }
+
+    private GroupDef buildGroupDef(
+            Measure measure,
+            MeasureGroupComponent group,
+            MeasureScoring measureScoring,
+            CodeDef measureImpNotation,
+            CodeDef measureBasis) {
+
+        // group Measure Scoring
+        var groupScoring = getGroupMeasureScoring(measure, group);
+        // populationBasis
+        var groupBasis = getGroupPopulationBasis(group);
+        // improvement Notation
+        var groupImpNotation = getGroupImpNotation(measure, group);
+        var hasGroupImpNotation = groupImpNotation != null;
+
+        final Optional<MeasureGroupPopulationComponent> optMeasureObservationPopulation = group.getPopulation().stream()
+                .filter(this::isMeasureObservation)
+                .findFirst();
+
+        // aggregateMethod is used to capture continuous-variable method of aggregating MeasureObservation
+        final ContinuousVariableObservationAggregateMethod aggregateMethod =
+                getAggregateMethod(measure.getUrl(), optMeasureObservationPopulation.orElse(null));
+
+        final String criteriaReference =
+                getCriteriaReference(measure.getUrl(), group, optMeasureObservationPopulation.orElse(null));
+
+        // Populations
+        checkIds(group);
+
+        var populationsWithCriteriaReference = group.getPopulation().stream()
+                .map(population -> buildPopulationDef(population, criteriaReference))
+                .toList();
+
+        final Optional<PopulationDef> optPopulationDefDateOfCompliance =
+                buildPopulationDefForDateOfCompliance(measure.getUrl(), group, populationsWithCriteriaReference);
+
+        // Stratifiers
+        var stratifiers = group.getStratifier().stream()
+                .map(mgsc -> buildStratifierDef(measure.getUrl(), mgsc))
+                .toList();
+
+        return new GroupDef(
+                group.getId(),
+                conceptToConceptDef(group.getCode()),
+                stratifiers,
+                mergePopulations(populationsWithCriteriaReference, optPopulationDefDateOfCompliance.orElse(null)),
+                getScoringDef(measure, measureScoring, groupScoring),
+                hasGroupImpNotation,
+                getImprovementNotation(measureImpNotation, groupImpNotation),
+                getPopulationBasisDef(measureBasis, groupBasis),
+                aggregateMethod);
+    }
+
+    private void checkIds(MeasureGroupComponent group) {
+        group.getPopulation().forEach(R4MeasureDefBuilder::checkId);
+    }
+
+    private List<PopulationDef> mergePopulations(
+            List<PopulationDef> populationsWithCriteriaReference, @Nullable PopulationDef populationDef) {
+
+        final Builder<PopulationDef> immutableListBuilder = ImmutableList.builder();
+
+        immutableListBuilder.addAll(populationsWithCriteriaReference);
+
+        Optional.ofNullable(populationDef).ifPresent(immutableListBuilder::add);
+
+        return immutableListBuilder.build();
+    }
+
+    @Nonnull
+    private PopulationDef buildPopulationDef(MeasureGroupPopulationComponent population, String criteriaReference) {
+        return new PopulationDef(
+                population.getId(),
+                conceptToConceptDef(population.getCode()),
+                MeasurePopulationType.fromCode(
+                        population.getCode().getCodingFirstRep().getCode()),
+                population.getCriteria().getExpression(),
+                criteriaReference);
+    }
+
+    private Optional<PopulationDef> buildPopulationDefForDateOfCompliance(
+            String measureUrl, MeasureGroupComponent group, List<PopulationDef> populationDefs) {
+
+        if (group.getExtensionByUrl(CQFM_CARE_GAP_DATE_OF_COMPLIANCE_EXT_URL) == null
+                || checkPopulationForCode(populationDefs, DATEOFCOMPLIANCE) == null) {
+            return Optional.empty();
+        }
+
+        // add to definition
+        var expressionType = (Expression) group.getExtensionByUrl(CQFM_CARE_GAP_DATE_OF_COMPLIANCE_EXT_URL)
+                .getValue();
+        if (!expressionType.hasExpression()) {
+            throw new InvalidRequestException("no expression was listed for extension: %s for Measure: %s"
+                    .formatted(CQFM_CARE_GAP_DATE_OF_COMPLIANCE_EXT_URL, measureUrl));
+        }
+        var expression = expressionType.getExpression();
+        var populateDefDateOfCompliance = new PopulationDef(
+                "dateOfCompliance", totalConceptDefCreator(DATEOFCOMPLIANCE), DATEOFCOMPLIANCE, expression);
+
+        return Optional.of(populateDefDateOfCompliance);
+    }
+
+    private ContinuousVariableObservationAggregateMethod getAggregateMethod(
+            String measureUrl, @Nullable MeasureGroupPopulationComponent measureObservationPopulation) {
+
+        if (measureObservationPopulation == null) {
+            return ContinuousVariableObservationAggregateMethod.N_A;
+        }
+
+        var aggMethodExt = measureObservationPopulation.getExtensionByUrl(EXT_CQFM_AGGREGATE_METHOD_URL);
+        if (aggMethodExt != null) {
+            // this method is only required if scoringType = continuous-variable
+            var aggregateMethodString = aggMethodExt.getValue().toString();
+
+            var aggregateMethod = ContinuousVariableObservationAggregateMethod.fromString(aggregateMethodString);
+
+            // check that method is accepted
+            if (aggregateMethod == null) {
+                throw new InvalidRequestException("Measure Observation method: %s is not a valid value for Measure: %s"
+                        .formatted(aggregateMethodString, measureUrl));
+            }
+
+            return aggregateMethod;
+        }
+
+        return ContinuousVariableObservationAggregateMethod.N_A;
+    }
+
+    @Nullable
+    private String getCriteriaReference(
+            String measureUrl,
+            MeasureGroupComponent group,
+            @Nullable MeasureGroupPopulationComponent measureObservationPopulation) {
+
+        if (measureObservationPopulation == null) {
+            return null;
+        }
+
+        var populationCriteriaExt = measureObservationPopulation.getExtensionByUrl(EXT_CQFM_CRITERIA_REFERENCE);
+        if (populationCriteriaExt != null) {
+            // required for measure-observation populations
+            // the underlying expression is a cql function
+            // the criteria reference is what is used to populate parameters of the function
+            String critReference = populationCriteriaExt.getValue().toString();
+            // check that the reference exists in the GroupDef.populationId
+            if (group.getPopulation().stream().map(Element::getId).noneMatch(id -> id.equals(critReference))) {
+                throw new InvalidRequestException(
+                        "no matching criteria reference was found for extension: %s for Measure: %s"
+                                .formatted(EXT_CQFM_CRITERIA_REFERENCE, measureUrl));
+            }
+            // assign validated reference
+            return critReference;
+        }
+
+        return null;
+    }
+
+    private boolean isMeasureObservation(MeasureGroupPopulationComponent pop) {
+
+        checkId(pop);
+
+        MeasurePopulationType populationType =
+                MeasurePopulationType.fromCode(pop.getCode().getCodingFirstRep().getCode());
+
+        return populationType != null && populationType.equals(MeasurePopulationType.MEASUREOBSERVATION);
+    }
+
+    @Nonnull
+    private StratifierDef buildStratifierDef(String measureUrl, MeasureGroupStratifierComponent mgsc) {
+        checkId(mgsc);
+
+        // Components
+        var components = new ArrayList<StratifierComponentDef>();
+        for (MeasureGroupStratifierComponentComponent scc : mgsc.getComponent()) {
+            checkId(scc);
+            var scd = new StratifierComponentDef(
+                    scc.getId(),
+                    conceptToConceptDef(scc.getCode()),
+                    scc.hasCriteria() ? scc.getCriteria().getExpression() : null);
+
+            components.add(scd);
+        }
+
+        if (!components.isEmpty() && mgsc.getCriteria().getExpression() != null) {
+            throw new InvalidRequestException(
+                    "Measure: %s with stratifier: %s, has both components and stratifier criteria expressions defined. Only one should be specified"
+                            .formatted(measureUrl, mgsc.getId()));
+        }
+
+        return new StratifierDef(
+                mgsc.getId(),
+                conceptToConceptDef(mgsc.getCode()),
+                mgsc.getCriteria().getExpression(),
+                getStratifierType(measureUrl, mgsc),
+                components);
     }
 
     public static void triggerFirstPassValidation(List<Measure> measures) {
         measures.forEach(R4MeasureDefBuilder::triggerFirstPassValidation);
+    }
+
+    @Nonnull
+    private List<SdeDef> getSdeDefs(Measure measure) {
+        final List<SdeDef> sdes = new ArrayList<>();
+        for (MeasureSupplementalDataComponent s : measure.getSupplementalData()) {
+            checkId(s);
+            checkSDEUsage(measure, s);
+            var sdeDef = new SdeDef(
+                    s.getId(), conceptToConceptDef(s.getCode()), s.getCriteria().getExpression());
+            sdes.add(sdeDef);
+        }
+        return sdes;
+    }
+
+    private static MeasureStratifierType getStratifierType(
+            String measureUrl, MeasureGroupStratifierComponent measureGroupStratifierComponent) {
+        if (measureGroupStratifierComponent == null) {
+            return MeasureStratifierType.VALUE;
+        }
+
+        final boolean hasCriteria = measureGroupStratifierComponent.hasCriteria();
+
+        final boolean hasAnyComponentCriteria = measureGroupStratifierComponent.getComponent().stream()
+                .anyMatch(MeasureGroupStratifierComponentComponent::hasCriteria);
+
+        if (hasCriteria && hasAnyComponentCriteria) {
+            throw new InvalidRequestException(
+                    "Stratifier Cannot have both criteria: %s and any component criteria: %s for measure: %s"
+                            .formatted(hasCriteria, hasAnyComponentCriteria, measureUrl));
+        }
+
+        if (!hasCriteria && !hasAnyComponentCriteria) {
+            throw new InvalidRequestException(
+                    "Stratifier cannot have neither criteria nor component for measure: %s".formatted(measureUrl));
+        }
+
+        if (hasCriteria) {
+            return MeasureStratifierType.CRITERIA;
+        }
+
+        return MeasureStratifierType.VALUE;
     }
 
     private static void triggerFirstPassValidation(Measure measure) {
@@ -187,8 +354,8 @@ public class R4MeasureDefBuilder implements MeasureDefBuilder<Measure> {
             Measure measure, MeasureSupplementalDataComponent measureSupplementalDataComponent) {
         var hasUsage = measureSupplementalDataComponent.getUsage().stream()
                 .filter(t -> t.getCodingFirstRep().getCode().equals(SDE_USAGE_CODE))
-                .collect(Collectors.toList());
-        if (hasUsage == null || hasUsage.isEmpty()) {
+                .toList();
+        if (CollectionUtils.isEmpty(hasUsage)) {
             throw new InvalidRequestException("SupplementalDataComponent usage is missing code: %s for Measure: %s"
                     .formatted(SDE_USAGE_CODE, measure.getUrl()));
         }
@@ -213,13 +380,13 @@ public class R4MeasureDefBuilder implements MeasureDefBuilder<Measure> {
 
     private static void checkId(Element e) {
         if (e.getId() == null || StringUtils.isBlank(e.getId())) {
-            throw new NullPointerException("id is required on all Elements of type: " + e.fhirType());
+            throw new InvalidRequestException("id is required on all Elements of type: " + e.fhirType());
         }
     }
 
     private static void checkId(Resource r) {
         if (r.getId() == null || StringUtils.isBlank(r.getId())) {
-            throw new NullPointerException("id is required on all Resources of type: " + r.fhirType());
+            throw new InvalidRequestException("id is required on all Resources of type: " + r.fhirType());
         }
     }
 
